# Tirocinio

./: .gitignore  README.md  main.cpp  nDPISimpleIntRevised.cpp
nDPILight/: .nDPILight.cpp.swp  CMakeLists.txt  Makefile  README.md  gmon.out  nDPILight.cpp  perf.data.old
nDPILight/example/: CMakeLists.txt  Makefile  nDPILight.cpp
nDPILight/example/src/include/: PcapReader.h  flow_info.h  napatech_reader.h  pcap_reader.h  reader.h  reader_thread.h
nDPILight/example/src/include/ndpi_include/: ndpi_api.h  ndpi_config.h  ndpi_define.h
nDPILight/example/src/lib/: FlowInfo.cpp  NapatechReader.cpp  PcapReader.cpp  ReaderThread.cpp  flow_info.cpp  napatech_reader.cpp  pcap_reader.cpp  reader_thread.cpp
nDPILight/example/testDir/: CMakeCache.txt  Makefile  cmake_install.cmake
nDPILight/src/include/: .NapatechReader.h.swp  .NtDissector.h.swp  .PcapDissector.h.swp  CaptureStats.h  FlowInfo.h  NapatechReader.h  NtDissector.h  PacketDissector.h  PacketInfo.h  PcapDissector.h  PcapReader.h  Profiling.h  Reader.h  ReaderThread.h  SupportStructs.h  Trace.h  flow_info.h  napatech_reader.h  ndpi_api.h  ndpi_config.h  ndpi_define.h  ndpi_light_includes.h  pcap_reader.h  reader.h  reader_thread.h
nDPILight/src/lib/: .NapatechReader.cpp.swo  .NapatechReader.cpp.swp  .NtDissector.cpp.swp  .PacketDissector.cpp.swp  .Reader.cpp.swp  FlowInfo.cpp  Makefile  NapatechReader.cpp  NtDissector.cpp  PacketDissector.cpp  PacketInfo.cpp  PcapDissector.cpp  PcapReader.cpp  Reader.cpp  ReaderThread.cpp  Trace.cpp  flow_info.cpp  napatech_reader.cpp  pcap_reader.cpp  reader_thread.cpp  ù
nDPIRevision/: CMakeLists.txt  ndpiSimpleIntRevised.cpp  ndpiSimpleIntegration.c  tmp.cpp
nDPIRevision/lib/: flow.cpp  (+3 more)
ntTests/: .main.cpp.swp  Makefile  main.cpp  main2.cpp  test
